Fixed the stupid css thingy with the header covering the body, idk

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -46,7 +46,7 @@ p {
 }
 
 .toolbar {
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
   right: 0;
